# mmm_articles

./: README.md  pyproject.toml
src/: article_output.py  budget_optimization.py  budget_optimization_w_robyn.py  check_all_dates.py  constants.py  helpers.py  main.py  output.py  robyn_scores.py  test2.ipynb
src/data_generation/: custom_dgp.py  dg_constants.py  fake_marketing.csv  fake_marketing.py  true_parameters.py
src/robyn/: analyze_robyn_and_true.py
src/ssm_model/: analyze_ssm.py  constants.py  diagnostics.py  estimated_parameters.py  estimated_parameters_bounds.py  kalman_filter.py  kalman_forecaster.py  kalman_smoother.py  multicore_helpers.py  run_model.py  scores.py  state_space_model.py  state_space_parameters.py  things_to_change_per_model.txt
